<resources>
    <string name="app_name">HangmanGame</string>

    <string name="word_length_question">How long is your word?</string>
    <string name="action_settings">Settings</string>
    <string name="go_button">Play!</string>
    <string name="title_activity_hangman_game">HangmanGameActivity</string>

    <string name="yes">Yesss</string>
    <string name="no">Nooo</string>

    <string name="game_title">Current word:</string>
    <string name="current_word_default">  </string>
    <string name="first_guess_default">Does your word contain E?</string>

    <string name="yes_button">Yessss</string>
    <string name="no_button">Noooo</string>
    <string name="title_activity_at_what_letters">AtWhatLettersActivity</string>

    <string name="at_what_letters">At what letters? Check all that apply.</string>
    <string name="blank_word"> </string>
</resources>
